Fix: prevent spaces from collapsing

--- a/src/dicebluff-client/css/main.css
+++ b/src/dicebluff-client/css/main.css
@@ -39,6 +39,11 @@ body {
 .output,
 .prompt {
 	word-break: break-all;
+	white-space: pre;
+}
+
+.output:empty::after {
+	content: ' ';
 }
 
 .output.from-prompt::before {
